tests/failures/missing_comma_between_opts.stderr
error: expected `,`
  --> tests/failures/missing_comma_between_opts.rs:19:5
   |
19 |     handle_name = MyHandle,
   |     ^^^^^^^^^^^
